[package]
name = "gridmapper"
version = "0.1.0"
edition = "2021"
authors = ["Elric <elric.grisell@gmail.com>"]
repository = "https://github.com/onelric/gridmapper"
license = "MIT OR Apache-2.0"
description = "A simple map editor for me."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.2"
num = "0.4.0"


piston = "0.53.1"
piston2d-graphics = "0.42.0"
piston2d-opengl_graphics = "0.81.0"
pistoncore-glutin_window = "0.69.0"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

lazy_static = "1.4.0"
const_format = "0.2.22"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

